--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,4 +7,15 @@
     android:background="@drawable/hospital_bed"
     tools:context="skywalkerapps.zombiegame.MainActivity">
 
+
+    <TextView
+        android:id="@+id/text_a1"
+        android:textSize="36sp"
+        android:textColor="#FFFFFF"
+        android:textAlignment="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
