--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/hospital_bed"
+    android:background="@drawable/zombie_hands"
     tools:context="skywalkerapps.zombiegame.MainActivity">
 
 
     <TextView
         android:id="@+id/text_a1"
         android:textSize="36sp"
-        android:textColor="#FFFFFF"
+        android:textColor="#8B0000"
         android:textAlignment="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
