--- a/app/src/main/res/layout/weaponsloadout.xml
+++ b/app/src/main/res/layout/weaponsloadout.xml
@@ -8,47 +8,51 @@
     tools:layout_editor_absoluteY="25dp">
 
     <TextView
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:id="@+id/textView4"
+        android:textSize="25sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:textColor="#000000"
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:id="@+id/weapon_button1"
+        android:textSize="15sp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="226dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/button3" />
+        app:layout_constraintStart_toStartOf="@+id/weapon_button3" />
 
     <Button
         android:textColor="#000000"
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
+        android:id="@+id/weapon_button2"
+        android:textSize="15sp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintStart_toStartOf="@+id/weapon_button1"
+        app:layout_constraintTop_toBottomOf="@+id/weapon_button1" />
 
     <Button
         android:textColor="#000000"
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
+        android:id="@+id/weapon_button3"
+        android:textSize="15sp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="19dp"
-        app:layout_constraintStart_toStartOf="@+id/button4"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintStart_toStartOf="@+id/weapon_button4"
+        app:layout_constraintTop_toBottomOf="@+id/weapon_button2" />
 
     <Button
         android:textColor="#000000"
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
+        android:id="@+id/weapon_button4"
+        android:textSize="15sp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
