Alot of debugging done to make app run smoothly, created new intents for start game button, added a weapons loadout activity, next to do is to write code for the random generator and set that to the output

--- a/app/src/main/res/layout/leavingbase.xml
+++ b/app/src/main/res/layout/leavingbase.xml
@@ -12,6 +12,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:textSize="15sp"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/start_game_button"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:text="@string/start_game"
+        android:textColor="#FB00"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
