--- a/app/src/main/res/layout/vehicle_encounter_activity.xml
+++ b/app/src/main/res/layout/vehicle_encounter_activity.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000">
@@ -49,6 +48,7 @@
 
     <ImageView
         android:id="@+id/imageView2"
+        android:contentDescription="@string/image_desc"
         android:layout_width="wrap_content"
         android:layout_height="353dp"
         android:layout_alignParentBottom="true"
